# devsecrets

./: Cargo.toml  README.md  vscode.code-workspace
cargo-devsecrets/: Cargo.toml
cargo-devsecrets/src/: cli.rs  main.rs  workspace.rs
devsecrets/: Cargo.toml
devsecrets-core/: Cargo.toml
devsecrets-core/src/: lib.rs
devsecrets-macros/: Cargo.toml
devsecrets-macros/src/: lib.rs
devsecrets/devsecrets-core/: Cargo.toml
devsecrets/devsecrets-macros/: Cargo.toml
devsecrets/src/: lib.rs
src/: format.rs  lib.rs
