[package]
name = "devsecrets"
version = "0.1.0"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xdg = "2.2.0"
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.104", features = ["derive"] }
anyhow = "1.0.26"
serde_json = "1.0.48"

[workspace]
members = ["cargo-devsecrets"]