[package]
name = "devsecrets"
version = "0.1.0-dev1"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uuid = { version = "0.8.1", features = ["v4"] }
serde = { version = "1.0.104", features = ["derive"] }
anyhow = "1.0.26"
serde_json = "1.0.48"
devsecrets-macros = { path = "devsecrets-macros" }
lazy_static = "1.4.0"
dirs = "2.0.2"
log = "0.4.8"
devsecrets-core = { path = "devsecrets-core" }

[workspace]
members = ["cargo-devsecrets", "devsecrets-macros", "devsecrets-core"]
