[package]
name = "devsecrets-macros"
version = "0.1.0-dev1"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.14"
quote = "1.0.2"
proc-macro2 = "1.0.8"
devsecrets-core = { path = "../devsecrets-core", version = "0.1.0-dev1" }

