[package]
name = "devsecrets"
version = "0.1.0-dev1"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.104", features = ["derive"] }
serde_json = "1.0.48"
devsecrets-macros = { path = "devsecrets-macros" }
dirs = "2.0.2"
log = "0.4.8"
devsecrets-core = { path = "devsecrets-core" }
thiserror = "1.0.11"

[workspace]
members = ["devsecrets-macros", "devsecrets-core"]
