[package]
name = "devsecrets-core"
version = "0.1.0-dev1"
authors = ["Brian Chin <brian.chin@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dirs = "2.0.2"
uuid = { version = "0.8.1", features = ["v4"] }
